@@ -13,6 +13,10 @@ tasks.withType(JavaCompile) {
     options.compilerArgs += "--enable-preview"
 }
 
+test {
+    jvmArgs(['--enable-preview'])
+}
+
 group 'org.monospark.remix'
 version '0.1'
 
@@ -22,7 +26,8 @@ repositories {
 
 dependencies {
     testImplementation project(':sample')
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    testImplementation group: 'junit', name: 'junit', version: '4.12'
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
 }
 
 task generateJavadocs(type: Javadoc) {
